--- a/_iridesce/2-07-1-tech.md
+++ b/_iridesce/2-07-1-tech.md
@@ -16,3 +16,8 @@ layout: post
 虹烁独立区的旅游业十分发达，除此之外FTL飞船制造、软件开发、商务电子、金融也位列阿瓦隆其次，在这些领域均拥有多家巨型公司、例如空天公司（Universe-I）、多硬（massivehard）、中央管道交通（CTT）、虹烁银行（BOIr）等。阿瓦隆外的第一艘商用远程稳定FTL飞船“晨昏线号”由空天公司推出；多硬研发了最普遍的Spectrix与Nexus兼容的多维图形化操作界面GateOS；中央管道交通设计生产诸多先进的管道列车，并运营着阿卡奇最大的管道与轨道交通；虹烁银行是仅此于阿瓦隆金融的第二大金融产业实体。
 
 ---
+
+![著名软件公司多硬]({{site.baseurl}}\assets\images\logo\massivehard.png)
+著名软件公司多硬
+
+---
