--- a/_iridesce/2-13-1-risk.md
+++ b/_iridesce/2-13-1-risk.md
@@ -9,7 +9,7 @@ layout: post
 
 ---
 
-虹烁独立区的阿卡奇地磁活动强烈，虽然这种地磁活动有时可以提供大量的能量，但也常常影响正常的生产生活。有学者认为，未来阿卡奇的地磁活动可能会越来越强，最终越过收益平衡点，使得阿卡奇上的生产生活阻碍巨大，最终导致社会停摆。但这种说法并非主流，首先阿卡奇的地磁活动并没有公认的在增强，且随着科技的进步事实上各方面的阻碍都不断被克服。但是坊间传闻通常把这种消息夸大，官方宣称也在对此种情况做必要的准备。
+虹烁独立区的阿卡奇地磁活动强烈，虽然这种地磁活动有时可以提供大量的能量，但也常常影响正常的生产生活。有学者认为，未来阿卡奇的地磁活动可能会越来越强，之后越过收益平衡点，使得阿卡奇上的生产生活阻碍巨大，最终导致社会停摆。但这种说法并非主流，首先阿卡奇的地磁活动并没有公认的在增强，且随着科技的进步事实上各方面的阻碍都不断被克服。但是坊间传闻通常把这种消息夸大，官方宣称也在对此种情况做必要的准备。
 
 虹烁独立区与阿瓦隆羽耀有着密切的关系，无论是历史起源，还是文化相似性，还是人口派系构成，在多方面都可能受阿瓦隆羽耀的影响。目前政府合法性主要来源于和平的环境与高速发展，但在政府内部和社会上也指出，尽管多年的发展已经使虹烁独立区建立了完全不同阿瓦隆羽耀的叙事和认同，但上述因素仍然可能会提供许多外部变量，有可能导致地方分离主义的诞生。虹烁独立区的AI较为激进的应用也让有些人担忧。
 
